--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
 				</section>
 				<section data-state="case6_force">
 				<style>.case6_force header.left:after { content: "DPRK Net Migration vs. Global Chronic Malnutrition (Stunting)"; }</style>
-					<iframe src="iframe/force/dprkforce.html" width="900px" height="400px"></iframe>
+					<iframe src="iframe/force/dprkforce.html" width="900px" height="400px" style="margin-top:100px;"></iframe>
 					<p><small>Net Migration Exceeding 1000</small></p>
 					<aside class="notes">
 						<ul>
@@ -1076,7 +1076,7 @@
 				</section>
 				<section data-state="case6_scale">
 				<style>.case6_scale header.left:after { content: "Scaling Global Malnutrition to the DPRK"; }</style>
-					<iframe src="iframe/scale/scaleme.html" width="900px" height="400px"></iframe>					
+					<iframe src="iframe/scale/scaleme.html" width="900px" height="400px" style="margin-top:50px;"></iframe>					
 					<aside class="notes">
 						<ul>
 							<li>Malnutrition in children can have damaging long term consequences, as it affects the future generation of a nation. In the interactive visualization “Scaling Malnutrition to the DPRK”, we allow users to choose to display chronic or acute malnutrition (or both) on a map of the  DPRK.</li>
@@ -1094,11 +1094,11 @@
 				</section>
 				<section data-state="situation">
 				<style>.situation header.left:after { content: "MDGs of Social and Education Issues"; }</style>
-					<h5>Gender Parity Index in primary level enrolment</h5>
+					<h5 style="margin-top:100px;">Gender Parity Index in primary level enrolment</h5>
 					<iframe src="iframe/parcoords/parcoords.html" style="width:1000px; height:510px;"></iframe>
 				</section>
 				<section data-state="situation">
-					<h5>Gender Parity Index in primary level enrolment (2009-2012)</h5>
+					<h5 style="margin-top:50px;">Gender Parity Index in primary level enrolment (2009-2012)</h5>
 					<iframe src="small_multiples.html" style="width:900px; height:500px;"></iframe>
 				</section>
 				<section data-state="header36">
@@ -1219,7 +1219,7 @@
 				</section>
 				<section data-state="star_dmsp">
 				<style>.star_dmsp header.left:after { content: "DMSP vs MDG Indicators"; }</style>
-					<iframe src="iframe/sortheat/sortheat.html" width="900px" height="500px" style="margin-top:50px;"></iframe>	
+					<iframe src="iframe/sortheat/sortheat.html" width="900px" height="500px" style="margin-top:75px;"></iframe>	
 					<p><small><a href="data/dmspMDG.csv">Download Dataset</a></small></p>									
 				</section>
 				<section data-state="star_con">
