--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					<h2>Visualizing the Power of</h2>
 					<h2>Evidence-Driven Policy in</h2>
 					<h2>Countries in Transition</h2>
-					<p>Giang Nguyen, Star Ying, Hannah Cho, Ariel Lee</p>
+					<p>Giang Nguyen, Star YING, Hannah Cho, Ariel Lee</p>
 					<p><small>International Strategy and Reconciliation Foundation</small></p>
 
 					<p>Igor Barahona</p>
